--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./swiper/swiper-bundle.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -89,7 +89,7 @@
     <!-- end make web site -->
 
 
-    <script src="./node_modules/swiper/swiper-bundle.min.js"></script>
+    <script src="./swiper/swiper-bundle.min.js"></script>
 
     <script>
         var swiper = new Swiper(".mySwiper", {
